weather class description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="card">
@@ -16,7 +18,9 @@
                 </svg></button>
        </div>
        <div class="weather">
-           <h2 class="city"></h2>
+           <h2 class="city">London weather</h2>
+           <div class="temperature">30° c</div>
+           <div class="description">Windy</div>
        </div>
     </div>
 </body>
