--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="card">
@@ -18,7 +18,7 @@
                 </svg></button>
        </div>
        <div class="weather">
-           <h2 class="city">London weather</h2>
+           <h2 class="city">London</h2>
            <div class="temperature">30° c</div>
            <div class="description">Windy</div>
        </div>
