--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
                  </path>
                 </svg></button>
        </div>
-       <div class="weather">
-           <h2 class="city">London</h2>
-           <div class="temperature">30° c</div>
-           <div class="description">Windy</div>
+       <div class="weather loading">
+           <h2 class="city"></h2>
+           <div class="temperature"></div>
+           <div class="description"></div>
+           <div class="feels_like"></div>
        </div>
     </div>
 </body>
